Fix #28087: Opening files in the text editor ignores the last newline '\n'

It was tricky conversion of file buffer to text lines. Should work fine now.